iniciado implementacao de seguranca na aula 2

--- a/src/YodaEventBundle/Resources/views/Event/index.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/index.html.twig
@@ -1,5 +1,7 @@
 {% extends '@YodaEvent/Template/base.html.twig' %}
 
+{% block title %}Jedi Masters{% endblock %}
+
 {% block body %}
     <h1>Event list</h1>
 
