implementado login e regras de acesso

--- a/src/YodaEventBundle/Resources/views/Event/index.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Event list</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -39,9 +39,4 @@
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('event_new') }}">Create a new entry</a>
-        </li>
-    </ul>
 {% endblock %}
