--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -2,25 +2,40 @@
 {# ... you will probably extends your base template, like base.html.twig #}
 
 
+{% extends 'YodaEventBundle:Template:base.html.twig' %}
 
-{#
+    {% block title %} Log in galaxy {% endblock %}
+
+{% block body %}
+
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <div class="col-md-6">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form action="{{ path('login_form') }}" method="post">
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+                <div class="form-group">
+                <label for="username">Username:</label>
+                <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" />
+                </div>
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-{#
-    <button type="submit">login</button>
-</form>
-#}
+                <div class="form-group">
+                <label for="password">Password:</label>
+                <input class="form-control" type="password" id="password" name="_password" />
+                </div>
+                {#
+                    If you want to control the URL the user
+                    is redirected to on success (more details below)
+                    <input type="hidden" name="_target_path" value="/account" />
+                #}
+
+                <button type="submit" class="btn btn-primary pull-right">login</button>
+            </form>
+        </div>
+    </div>
+    </div>
+
+{% endblock %}
