--- a/src/YodaEventBundle/Resources/views/Event/edit.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/edit.html.twig
@@ -13,9 +13,12 @@
             <a href="{{ path('event_index') }}">Back to the list</a>
         </li>
         <li>
+
+            {% if is_granted('ROLE_ADMIN') %}
             {{ form_start(delete_form) }}
                 <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
+            {% endif %}
         </li>
     </ul>
 {% endblock %}
