--- a/src/YodaEventBundle/Resources/views/Event/new.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/new.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
     <h1>Event creation</h1>
+    <hr class="divider" />
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
