--- a/src/YodaEventBundle/Resources/views/Template/base.html.twig
+++ b/src/YodaEventBundle/Resources/views/Template/base.html.twig
@@ -7,12 +7,53 @@
                 Event from a galaxy far far away
             {%- endif -%}
         </title>
+
+        <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+        <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     </head>
 
-    <link rel="stylesheet" href="{{ asset('bundles/yodaevent/default.css') }}" />
-
 <body>
-    <h1>Yoda template 2</h1>
-    {% block body %}{% endblock %}
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Yoda Event</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% if app.user != null  %}
+                    <li><a href="{{ path('logout') }}">Sair <strong>{{ app.user }}</strong></a></li>
+                {% else %}
+                    <li><a href="{{ path('login_form') }}">Login</a></li>
+                {% endif %}
+
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li>
+                        <a href="{{ path('event_new') }}">Criar novo evento</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+    <div class="col-md-12">
+        {% block body %}{% endblock %}
+    </div>
+</div>
+
+
 </body>
 </html>
