--- a/src/YodaEventBundle/Resources/views/Template/base.html.twig
+++ b/src/YodaEventBundle/Resources/views/Template/base.html.twig
@@ -32,13 +32,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                {% if app.user != null  %}
-                    <li><a href="{{ path('logout') }}">Sair <strong>{{ app.user }}</strong></a></li>
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED')  %}
+                    <li><a href="{{ path('logout') }}">Sair <strong>{{ app.user.username }}</strong></a></li>
                 {% else %}
                     <li><a href="{{ path('login_form') }}">Login</a></li>
                 {% endif %}
 
-                {% if is_granted('ROLE_ADMIN') %}
+                {% if is_granted('ROLE_USER') %}
                     <li>
                         <a href="{{ path('event_new') }}">Criar novo evento</a>
                     </li>
