Criado seguranca e remember-me

--- a/src/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/UserBundle/Resources/views/Register/register.html.twig
@@ -4,7 +4,7 @@
     <h1>Register</h1>
     <hr class="divider" />
 
-    <form action="{{ path('user_register') }}" method="post" novalidate="novalidate">
+    <form action="{{ path('user_register') }}" method="post">
         {{ form_errors(form) }}
 
         {{ form_row(form.username) }}
