--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -33,6 +33,12 @@
                 #}
 
                 <button type="submit" class="btn btn-primary pull-right">login</button>
+
+                <hr />
+
+                <div class="form-group">
+                    Remember-me <input type="checkbox" name="_remember_me" />
+                </div>
             </form>
         </div>
     </div>
