iniciado o relacionamento ManyToMany no Event

--- a/src/YodaEventBundle/Resources/views/Event/index.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/index.html.twig
@@ -20,25 +20,31 @@
                 <th>Time</th>
                 <th>Location</th>
                 <th>Details</th>
+                <th>Owner</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for event in events %}
             <tr>
-                <td><a href="{{ path('event_show', { 'id': event.id }) }}">{{ event.id }}</a></td>
+                <td><a href="{{ path('event_show', { 'slug': event.slug }) }}">{{ event.id }}</a></td>
                 <td>{{ event.name }}</td>
                 <td>{% if event.time %}{{ event.time|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ event.location }}</td>
                 <td>{{ event.details }}</td>
+                <td>{{ event.owner.username }}</td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('event_show', { 'id': event.id }) }}">show</a>
+                            <a href="{{ path('event_show', { 'slug': event.slug }) }}">show</a>
                         </li>
-                        <li>
-                            <a href="{{ path('event_edit', { 'id': event.id }) }}">edit</a>
-                        </li>
+
+                        {% if app.user == event.owner %}
+                            <li>
+                                <a href="{{ path('event_edit', { 'id': event.id }) }}">edit</a>
+                            </li>
+                        {% endif %}
+
                     </ul>
                 </td>
             </tr>
