--- a/src/YodaEventBundle/Resources/views/Event/index.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/index.html.twig
@@ -20,6 +20,7 @@
                 <th>Time</th>
                 <th>Location</th>
                 <th>Details</th>
+                <th>Attendees</th>
                 <th>Owner</th>
                 <th>Actions</th>
             </tr>
@@ -32,6 +33,7 @@
                 <td>{% if event.time %}{{ event.time|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ event.location }}</td>
                 <td>{{ event.details }}</td>
+                <td>{{ event.attendees|length }}</td>
                 <td>{{ event.owner.username }}</td>
                 <td>
                     <ul>
