--- a/src/YodaEventBundle/Resources/views/Event/index.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/index.html.twig
@@ -12,46 +12,7 @@
     
     <h1>Event list</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Time</th>
-                <th>Location</th>
-                <th>Details</th>
-                <th>Attendees</th>
-                <th>Owner</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for event in events %}
-            <tr>
-                <td><a href="{{ path('event_show', { 'slug': event.slug }) }}">{{ event.id }}</a></td>
-                <td>{{ event.name }}</td>
-                <td>{% if event.time %}{{ event.time|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ event.location }}</td>
-                <td>{{ event.details }}</td>
-                <td>{{ event.attendees|length }}</td>
-                <td>{{ event.owner.username }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('event_show', { 'slug': event.slug }) }}">show</a>
-                        </li>
+    <hr />
 
-                        {% if app.user == event.owner %}
-                            <li>
-                                <a href="{{ path('event_edit', { 'id': event.id }) }}">edit</a>
-                            </li>
-                        {% endif %}
-
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+    {{ render(controller('YodaEventBundle:Event:_upcomingEvents')) }}
 {% endblock %}
