adicionado event listener no doctrine na entity User

--- a/src/YodaEventBundle/Resources/views/Event/_upcomingEvents.html.twig
+++ b/src/YodaEventBundle/Resources/views/Event/_upcomingEvents.html.twig
@@ -19,6 +19,9 @@
 
                     <dt>who:</dt>
                     <dd>Todo # of people</dd>
+
+                    <dt>Posted</dt>
+                    <dd>{{ event.createdAt|ago }}</dd>
                 </dl>
             </section>
         </article>
